--- a/.github/workflows/buildapp.yml
+++ b/.github/workflows/buildapp.yml
@@ -113,7 +113,7 @@ jobs:
       - name: Prepare YouTube iPA
         id: prepare_youtube
         run: |
-          python3 -m pip install -yy gdown
+          python3 -m pip install gdown
           python3 -m pip gdown "$YOUTUBE_URL" -O main/YouTube.ipa
           cd ${{ github.workspace }}/main
           mv YouTube.ipa YouTube.zip
